--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clean-webpack-plugin": "^0.1.18",
     "css-hot-loader": "^1.3.6",
     "css-loader": "^0.28.9",
+    "expose-loader": "^0.7.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
