--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
       "target": "es5",
       "jsx": "react",
       "allowJs": true
-    }
+    },
+    "files": [
+      "./node_modules/phaser-ce/typescript/phaser.comments.d.ts"
+    ]
   }
