--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server -d --hot --config webpack.dev.js --watch",
+    "start": "webpack-dev-server -d --hot --config webpack.dev.js --port 8000 --watch",
     "build": "webpack --config webpack.prod.js --progress"
   },
   "dependencies": {
@@ -28,6 +28,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "ts-loader": "^3.3.1",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
