--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack --config webpack.prod.js --progress"
   },
   "dependencies": {
-    "phaser-ce": "^2.10.0"
+    "phaser": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^9.4.0",
@@ -35,6 +35,7 @@
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "raw-loader": "^0.5.1"
   }
 }
