--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
     "compilerOptions": {
-      "outDir": "./public/js/",
-      "sourceMap": true,
-      "noImplicitAny": true,
-      "module": "es6",
-      "target": "es5",
-      "jsx": "react",
-      "allowJs": true
+        "outDir": "./public/js/",
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "module": "es6",
+        "target": "es5",
+        "jsx": "react",
+        "allowJs": true
     },
     "files": [
-      "./node_modules/phaser-ce/typescript/phaser.comments.d.ts"
+        "./src/phaser.d.ts",
+        "./src/ts/game.ts"
     ]
-  }
+}
